refactor(rsa): 重构RSA加密工具类和RAG检索算法
- 移除ChatMessageController中的open接口并迁移到ApplicationChatController
- 统一RSA算法常量定义，将硬编码的"RSA"替换为KEY_ALGORITHM常量
- 优化RSAUtil中的switch语句，使用现代Java语法重构私钥解密逻辑
- 移除RSAUtil中的冗余main测试方法并重新启用新的测试方法
- 更新LinearRagRetriever中的BFS实体评分算法，对齐Python版本的剪枝逻辑
- 修正实体分数计算方式，实现分数累加和层级最小化处理
- 优化句子相似度计算，使用点积替代余弦相似度并改进默认值处理